--- a/templates/actor/actor-hero-sheet.html
+++ b/templates/actor/actor-hero-sheet.html
@@ -75,7 +75,7 @@
             {{#if (eq data.data.move_rolled false)}}
                 <button class="move-roll">Move ({{sum data.data.move '+' data.data.tmp_move}}d6)</button>
             {{/if}}
-            {{#ifCond (ifCond data.data.atk_count '>' 0) '&&' (eq data.data.attack_taken true)}}
+            {{#ifCond (gt data.data.atk_count 0) '&&' (eq data.data.attack_taken true)}}
                 <button class="attack-roll">Attack ({{sum data.data.atk '+' (sum data.data.tmp_atk '+' data.data.spell_bonus_atk)}} dice)</button>
             {{/ifCond}}
             {{#ifCond data.data.attack_taken '==' false}}
