--- a/templates/actor/actor-hero-sheet.html
+++ b/templates/actor/actor-hero-sheet.html
@@ -78,7 +78,7 @@
             {{#if (gt data.data.atk_count 0)}}
                 <button class="attack-roll">Attack ({{sum data.data.atk '+' (sum data.data.tmp_atk '+' data.data.spell_bonus_atk)}} dice)</button>
             {{/if}}
-            {{#ifCond (eq data.data.attack_taken false) && (eq data.data.search_taken false)}}
+            {{#ifCond (eq data.data.attack_taken false) '&&' (eq data.data.search_taken false)}}
                 <button class="search-traps">Traps?</button>
                 {{#in_room}}
                     <button class="search-treasure">Treasure?</button>
