--- a/templates/actor/actor-hero-sheet.html
+++ b/templates/actor/actor-hero-sheet.html
@@ -97,7 +97,7 @@
                 <tr class="center" title="{{potion.description}}">
                     <td>{{potion.name}}</td>
                     <td>{{potion.amount}}</td>
-                    <td><a><i class="fas fa-flask"></i></a></td>
+                    <td class="use-potion" data-key="{{@key}}"><a><i class="fas fa-flask"></i></a></td>
                 </tr>
                 {{/each}}
             </table>
