--- a/templates/actor/actor-evil-wizard-sheet.html
+++ b/templates/actor/actor-evil-wizard-sheet.html
@@ -1,5 +1,5 @@
 <form>
     <div class="flexrow">
-        <button class="new-dungeon">New Dungeon</button>
+        <button class="new-game">New Dungeon</button>
     </div>
 </form>
