--- a/templates/actor/actor-hero-sheet.html
+++ b/templates/actor/actor-hero-sheet.html
@@ -71,6 +71,7 @@
                 </table>
             </div>
         </div>
+        {{#ifCond (eq data.data.in_dungeon true) '&&' ('eq data.data.my_turn true')}}
         <div class="flexrow">
             {{#if (eq data.data.move_rolled false)}}
                 <button class="move-roll">Move ({{sum data.data.move '+' data.data.tmp_move}}d6)</button>
@@ -85,6 +86,11 @@
                 {{/in_room}}
             {{/ifCond}}
         </div>
+        {{else}}
+            {{if (eq data.data.initiative 0)}}
+            <button class="turn-roll">Roll Initiative</button>
+            {{/if}}
+        {{/ifCond}}
         <div>
             <h2 class="center">Potions</h2>
             <table>
