--- a/templates/actor/actor-evil-wizard-sheet.html
+++ b/templates/actor/actor-evil-wizard-sheet.html
@@ -8,7 +8,7 @@
         {{#each heros as |hero|}}
             <tr>
                 <td>{{hero.name}}</td>
-                <td>{{hero.body.value}}/{{hero.body.max}}</td>
+                <td>{{hero.data.data.body.value}}/{{hero.data.data.body.max}}</td>
             </tr>
         {{/each}}
         </table>
