--- a/templates/actor/actor-hero-sheet.html
+++ b/templates/actor/actor-hero-sheet.html
@@ -26,7 +26,11 @@
                 <table class="center" style="table-layout: fixed;">
                     <tr class="center">
                         <th>Move</th>
+                        {{#if (eq data.data.move_taken false)}}
                         <td>{{sum data.data.move '+' data.data.tmp_move}}d6</td>
+                        {{else}}
+                        <td>{{data.data.cur_move}}</td>
+                        {{/if}}
                     </tr>
                     <tr class="center">
                         <th>Body</th>
