--- a/templates/actor/actor-hero-sheet.html
+++ b/templates/actor/actor-hero-sheet.html
@@ -26,7 +26,7 @@
                 <table class="center" style="table-layout: fixed;">
                     <tr class="center">
                         <th>Move</th>
-                        {{#if (eq data.data.move_taken false)}}
+                        {{#if (eq data.data.move_rolled false)}}
                         <td>{{sum data.data.move '+' data.data.tmp_move}}d6</td>
                         {{else}}
                         <td>{{data.data.cur_move}}</td>
