--- a/templates/actor/actor-evil-wizard-sheet.html
+++ b/templates/actor/actor-evil-wizard-sheet.html
@@ -13,7 +13,7 @@
             <tr>
                 <th class="center perc70">Name</th>
                 <th class="center perc5"><i class="fas fa-dice"></i></th>
-                <th class="center perc5"><i class="fas fa-person-walking"></i></th>
+                <th class="center perc5"><i class="fas fa-solid fa-person-walking"></i></th>
                 <th class="center perc10"><i class="fas fa-heart"></i></th>
                 <th class="center perc5"><i class="fas fa-sword"></i></th>
                 <th class="center perc5"><i class="fas fa-shield-blank"></i></th>
@@ -23,7 +23,7 @@
             <tr>
                 <td class="center perc70">{{hero.name}}</td>
                 <td class="center perc5">{{hero.data.data.initiative}}</td>
-                <td class="center perc5">{{hero.data.data.move}}</td>
+                <td class="center perc5">{{hero.data.data.cur_move}}</td>
                 <td class="center perc10">{{hero.data.data.body.value}}/{{hero.data.data.body.max}}</td>
                 <td class="center perc5">{{sum hero.data.data.atk '+' (sum hero.data.data.tmp_atk '+' hero.data.data.spell_bonus_atk)}}</td>
                 <td class="center perc5">{{sum data.data.def '+' (sum data.data.tmp_def '+' data.data.spell_bonus_def)}}</td>
