--- a/templates/actor/actor-evil-wizard-sheet.html
+++ b/templates/actor/actor-evil-wizard-sheet.html
@@ -16,7 +16,7 @@
                 <th class="center perc5"><i class="fas fa-person-hiking"></i></th>
                 <th class="center perc10"><i class="fas fa-heart"></i></th>
                 <th class="center perc5"><i class="fas fa-skull"></i></th>
-                <th class="center perc5"><i class="fas fa-shield"></i></th>
+                <th class="center perc5"><i class="fas fa-shield-blank"></i></th>
                 <th class="center perc5"><i class="fas fa-brain"></i></th>
             </tr>
         {{#each heros as |hero|}}
