--- a/templates/actor/actor-evil-wizard-sheet.html
+++ b/templates/actor/actor-evil-wizard-sheet.html
@@ -8,6 +8,9 @@
         <button class="next-round">Next Round</button>
     </div>
     <div>
+        <h2>Treasures Remaining: {{treasures}}/{{treasure_max}}</h2>
+    </div>
+    <div>
         <h2 class="center">Heros</h2>
         <table>
             <tr>
