--- a/templates/actor/actor-evil-wizard-sheet.html
+++ b/templates/actor/actor-evil-wizard-sheet.html
@@ -8,7 +8,7 @@
         <button class="next-round">Next Round</button>
     </div>
     <div>
-        <h2>Treasures Remaining: {{treasures}}/{{treasure_max}}</h2>
+        <h2 class="center">Treasures Remaining: {{treasures}}/{{treasure_max}}</h2>
     </div>
     <div>
         <h2 class="center">Heros</h2>
