--- a/templates/actor/actor-monster-sheet.html
+++ b/templates/actor/actor-monster-sheet.html
@@ -14,7 +14,7 @@
                         {{/if}}
                     {{/each}}
                 </select>
-                <a class="center set-class">Select Class</a>
+                <a class="center set-class"> Select Class</a>
             </h3>
         {{else}}
             <h3 class="center">{{data.data.class_name}}</h3>
@@ -25,7 +25,7 @@
             <tr class="center">
                 <th>Move</th>
                 {{#if (eq data.data.move_rolled false)}}
-                <td>{{sum data.data.move '+' data.data.tmp_move}}d6</td>
+                <td>{{sum data.data.move '+' data.data.tmp_move}}</td>
                 {{else}}
                 <td>{{data.data.cur_move}}</td>
                 {{/if}}
