--- a/templates/actor/actor-evil-wizard-sheet.html
+++ b/templates/actor/actor-evil-wizard-sheet.html
@@ -14,6 +14,7 @@
         <h2 class="center">Heros</h2>
         <table>
             <tr>
+                <td class="center perc5"><i class="fas fa-crosshairs"></i></td>
                 <th class="center perc40">Name</th>
                 <th class="center perc5"><i class="fas fa-dice"></i></th>
                 <th class="center perc5"><i class="fas fa-person-hiking"></i></th>
@@ -24,6 +25,7 @@
             </tr>
         {{#each heros as |hero|}}
             <tr>
+                <td class="center perc5"><a class="target-player" data-name="hero.name"><i class="fas fa-crosshairs"></i></a></td>
                 <td class="center perc40">{{hero.name}}</td>
                 <td class="center perc5">{{hero.data.data.initiative}}</td>
                 <td class="center perc5">{{hero.data.data.cur_move}}</td>
@@ -33,6 +35,31 @@
                 <td class="center perc5">{{hero.data.data.mind}}</td>
             </tr>
         {{/each}}
+        </table>
+    </div>
+    <div>
+        <h2 class="center">Monsters</h2>
+        <table>
+            <tr>
+                <th>Name</th>
+                <th>Move</th>
+                <th>Body</th>
+                <th>Atk</th>
+                <th>Def</th>
+                <th>Mind</th>
+                <th class="center perc5"><i class="fas fa-crosshairs"></i></th>
+            </tr>
+            {{#each monsters as |mon|}}
+            <tr>
+                <td class="center perc40">{{mon.name}}</td>
+                <td class="center perc5">{{mon.move}}</td>
+                <td class="center perc5">{{mon.body}}</td>
+                <td class="center perc5">{{mon.atk}}</td>
+                <td class="center perc5">{{mon.def}}</td>
+                <td class="center perc5">{{mon.mind}}</td>
+                <td class="center perc5"><i class="fas fa-crosshairs attack-roll"></i></td>
+            </tr>
+            {{/each}}
         </table>
     </div>
 </form>
