--- a/templates/actor/actor-evil-wizard-sheet.html
+++ b/templates/actor/actor-evil-wizard-sheet.html
@@ -57,7 +57,7 @@
                 <td class="center perc5">{{mon.atk}}</td>
                 <td class="center perc5">{{mon.def}}</td>
                 <td class="center perc5">{{mon.mind}}</td>
-                <td class="center perc5"><i class="fas fa-crosshairs attack-roll"></i></td>
+                <td class="center perc5"><i class="fas fa-crosshairs attack-roll" data-index="{{@index}}"></i></td>
             </tr>
             {{/each}}
         </table>
