--- a/templates/actor/actor-evil-wizard-sheet.html
+++ b/templates/actor/actor-evil-wizard-sheet.html
@@ -25,7 +25,7 @@
             </tr>
         {{#each heros as |hero|}}
             <tr>
-                <td class="center perc5"><a class="target-player" data-name="hero.name"><i class="fas fa-crosshairs"></i></a></td>
+                <td class="center perc5"><a class="target-player" data-name="{{hero.name}}"><i class="fas fa-crosshairs"></i></a></td>
                 <td class="center perc40">{{hero.name}}</td>
                 <td class="center perc5">{{hero.data.data.initiative}}</td>
                 <td class="center perc5">{{hero.data.data.cur_move}}</td>
