--- a/templates/actor/actor-hero-sheet.html
+++ b/templates/actor/actor-hero-sheet.html
@@ -162,21 +162,19 @@
                     <th>Cast</th>
                 </tr>
                 {{#each data.data.spells as |spell|}}
-                    {{#if (eq ../data.data.my_turn)}}
-                        {{#has_spells spell.key}}
-                            {{#if (eq spell.cast false)}}
+                    {{#has_spells spell.key}}
+                        {{#if (eq spell.cast false)}}
                 <tr class="center" title="{{spell.description}}">
                     <td>{{spell.name}}</td>
                     <td>{{spell.element}}</td>
-                                {{#if (gt ../data.data.atk_count 0)}}
+                            {{#ifCond (gt ../data.data.atk_count 0) '&&' (eq ../data.data.my_turn true)}}
                     <td class="cast-spell" data-spell="{{@key}}"><a><i class="fas fa-bahai"></i></a></td>
-                                {{else}}
+                            {{else}}
                     <td><a><i class="fas fa-times"></i></a></td>
-                                {{/if}}
+                            {{/ifCond}}
                 </tr>
-                            {{/if}}
-                        {{/has_spells}}
-                    {{/if}}
+                        {{/if}}
+                    {{/has_spells}}
                 {{/each}}
             </table>
         </div>
